Fix issue with artist bio too long. See #3140.

--- a/src/FDC/EventMobileBundle/Resources/public/css/artist_custom.css
+++ b/src/FDC/EventMobileBundle/Resources/public/css/artist_custom.css
@@ -1,3 +1,7 @@
 .artist-picture .artiste-picture-inner img {
     max-width: 100%;
 }
+
+.text-content-artist {
+    max-height: none !important;
+}
